--- a/app.json
+++ b/app.json
@@ -38,6 +38,14 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow app to access your camera",
+          "microphonePermission": "Allow app to access your microphone",
+          "recordAudioAndroid": true
+        }
       ]
     ],
     "experiments": {
