chore: implement changes for eas

--- a/app.json
+++ b/app.json
@@ -8,6 +8,11 @@
     "scheme": "ninscanner",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/images/nysc.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
     "ios": {
       "supportsTablet": true
     },
