--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
       "permissions": [
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO"
-      ]
+      ],
+      "package": "com.utfrank.NINscanner"
     },
     "web": {
       "output": "static",
